# langchain-oracle

./: CONTRIBUTING.md  README.md  test_openai_model.py
libs/oci/: Makefile  PR_DESCRIPTION.md  README.md  pyproject.toml  test_parallel_tool_calling_integration.py  test_tool_call_optimization.py
libs/oci/docs/: API_REFERENCE.md  CHANGELOG.md  MODELS.md
libs/oci/examples/: SAMPLE_RESEARCH_OUTPUT.md
libs/oci/examples/agents/: deep_research_adb_datastore.py  deep_research_agent_demo.py  deep_research_oci_storage.py  gpt52_agent_demo.py  mcp_test_server.py  oci_agent_code_assistant.py  oci_agent_customer_support.py  oci_agent_data_analyst.py  oci_agent_example.py  oci_genai_agent_complete_guide.py  react_agent_example.py  test_mcp_integration.py  test_multi_model_integration.py  test_new_features_demo.py
libs/oci/examples/chat_models/: langchain_oci_openai_responses_api_example.py
libs/oci/examples/vision/: __init__.py  image_analysis.py
libs/oci/langchain_oci/: __init__.py  _compat.py
libs/oci/langchain_oci/agents/: __init__.py  common.py  react.py
libs/oci/langchain_oci/agents/datastores/: __init__.py
libs/oci/langchain_oci/agents/deep_research/: README.md  __init__.py  agent.py
libs/oci/langchain_oci/agents/deepagents/: README.md  agent.py
libs/oci/langchain_oci/agents/oci_agent/: __init__.py  agent.py  checkpoint.py  compression.py  confidence.py  events.py  hooks.py  reflexion.py  state.py  termination.py
libs/oci/langchain_oci/agents/react/: __init__.py  agent.py
libs/oci/langchain_oci/chat_models/: __init__.py  async_mixin.py  oci_data_science.py  oci_generative_ai.py  oci_generative_ai_responses_api.py
libs/oci/langchain_oci/chat_models/providers/: __init__.py  base.py  cohere.py  generic.py
libs/oci/langchain_oci/common/: async_support.py  auth.py  param_compat.py  utils.py
libs/oci/langchain_oci/datastores/: __init__.py
libs/oci/langchain_oci/datastores/tools/: __init__.py  base.py  factory.py  get_document.py  keyword_search.py  search.py  selector.py  stats.py
libs/oci/langchain_oci/datastores/vectorstores/: __init__.py  adb.py  base.py  (+1 more)
libs/oci/langchain_oci/document_compressors/: __init__.py  oci_generative_ai_rerank.py
libs/oci/langchain_oci/embeddings/: image.py  oci_data_science_model_deployment_endpoint.py  oci_generative_ai.py
libs/oci/langchain_oci/guardrails/: __init__.py  middleware.py  oci_guardrails.py
libs/oci/langchain_oci/llms/: __init__.py  oci_data_science_model_deployment_endpoint.py  oci_generative_ai.py  utils.py
libs/oci/langchain_oci/utils/: __init__.py  vision.py
libs/oci/tests/: conftest.py
libs/oci/tests/integration_tests/: test_compile.py  test_vision_real_images.py
libs/oci/tests/unit_tests/: test_imports.py
libs/oci/tutorials/: README.md
libs/oci/tutorials/01-getting-started/: README.md
libs/oci/tutorials/02-vision-and-multimodal/: README.md
libs/oci/tutorials/03-building-ai-agents/: README.md
libs/oci/tutorials/04-tool-calling-mastery/: README.md
libs/oci/tutorials/05-structured-output/: README.md
libs/oci/tutorials/06-model-deployments/: README.md
libs/oci/tutorials/07-async-for-production/: README.md
libs/oci/tutorials/08-openai-responses-api/: README.md
libs/oci/tutorials/09-provider-deep-dive/: README.md
libs/oci/tutorials/10-embeddings/: README.md
(+233 files in other folders)
