[tool.poetry]
name = "langchain-oci"
version = "0.2.0"
description = "An integration package connecting OCI and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/oracle/langchain-oracle"
license = "UPL"

[tool.poetry.urls]
"Source Code" = "https://github.com/oracle/langchain-oracle/tree/main/libs/oci"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = ">=0.3.20,<1.0.0"
langchain = ">=0.3.20,<1.0.0"
oci = ">=2.161.0"
pydantic = ">=2,<3"
aiohttp = ">=3.12.14"
openai = "^2.6.1"
oci-openai = "^1.0.0"
langchain-openai = "^0.3.35"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
syrupy = "^4.0.2"
pytest-asyncio = "^0.23.2"
pytest-watcher = "^0.3.4"
langchain-tests = "^0.3.12"
pytest-socket = "^0.7.0"
pytest-mock = "^3.15.0"
pytest-httpx = "^0.28.0"
responses = "^0.25.8"
langgraph = "^0.2.0"
langchain-openai = "^0.3.35"


[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]
langgraph = "^0.2.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.13.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1.7"
types-requests = "^2.28.11.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.ruff]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]
ignore = [
  "COM812",  # Messes with the formatter
]

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
error_summary = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# Ignore missing imports only for specific untyped packages
[[tool.mypy.overrides]]
module = [
    "oci.*",
    "ads.*",
    "langchain_openai.*",
    "oci_openai.*",
]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5 --cov=langchain_oci"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
  "requires: mark tests as requiring a specific library",
  "asyncio: mark tests as requiring asyncio",
  "scheduled: mark tests to run in scheduled testing",
]
asyncio_mode = "auto"
